styles/main.css
/*General
___________________________*/

html {
  background-color: #33C3F0;
  background-image: url('http://irishdeaths.com/wp-content/uploads/2015/07/wellington_harbour_2005_by_awe_inspired.jpg');
  background-size: cover;
  background-attachment: fixed;
}
ul {
  list-style-type: none;
  text-align: center;
}
a {
  color: white;
  text-decoration: none;
}
a:hover {
  color: rgb(0,121,255);
}
.section.header, .section.main {  
  text-align: center;
  padding-bottom: 2%;
}

/*Header
___________________________*/

.name {
  margin: 0px;
}
.menu li {
  margin: 4px 0px 0px 0px;
  text-align: center;  
  float: right;  
  text-transform: uppercase;  
}
.arrow {
  font-size:11px;
  line-height:0%;
}
.sub-menu {    
  padding:0px;
  margin: 0px;    
  top:100%;
  left:0px;
  z-index:-1;
  opacity:0;
  transition:opacity linear 0.15s;
  position: relative; 
  float: right;  
  min-width: 500px;     
}
.menu li:hover .sub-menu {
  z-index:1;
  opacity:1;
}
.sub-menu li {
  display:block;
  font-size:1.2em;
  margin: 0px;
  padding: 0px;    
} 
.sub-menu li a {
  padding:0px 30px;
  display:block;
}

/*Main Section
___________________________*/

.greeting {
  text-align: center;
  max-width: 60%;
  margin-left: auto;
  margin-right: auto; 
  color: white; 
  font-size: 4.5rem;
}
.button.button-primary {
  background-color: transparent;
  border-color: white;
  font-size: 5.0rem;
  margin: 50px; 
  padding: 3.0rem 3.0rem 6.5rem 3.0rem;   
}
.button.button-primary:hover {  
  background-color: transparent;
  border-color: transparent;
  font-size: 7.0rem; 
  border-color: white;  
}
.button.button-primary:focus {  
  background-color: transparent;
  border-color: white;  
}
.two-thirds.column {
  background-color: rgba(241,241,241,0.8);
  border-radius: 10px;  
}
.text-box {
  padding: 40px;
}
.text {
  padding: 0px;
  margin-bottom: 10px;
}
h2.text {
  font-size: 3.0rem;
  padding-top: 30px;
  padding-bottom: 10px;
}
h5.text {
  padding-bottom: 20px;
}
.side-menu {
  font-size: 2.0rem;  
}

/*Footer
___________________________*/

.section.footer {
  margin-top: 7%;
}
footer li {
  margin: 0px; 
  font-size: 1.6rem;   
}
div.columns.footer {
  float: right;
}
.footer-item {  
  margin: 0px 10px;
  display: inline-block;  
}

